# BrokenFlappyCosmWasm

./: README.md
client/: README.md  package-lock.json  package.json  server.js  webpack.config.js
client/src/: index.js
client/src/scenes/: BootScene.js  MenuScene.js  PlayScene.js
client/static/: bundle.js  bundle.js.LICENSE.txt  index.html
server/: README.md  package-lock.json  package.json  server.js
smart-contracts/: Cargo.toml  README.md
smart-contracts/contracts/flappy-controller/: Cargo.toml  README.md
smart-contracts/contracts/flappy-controller/examples/: schema.rs
smart-contracts/contracts/flappy-controller/schema/: config.json  config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
smart-contracts/contracts/flappy-controller/src/: error.rs  execute.rs  helpers.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs
smart-contracts/contracts/flappy-cw20/: Cargo.toml  README.md
smart-contracts/contracts/flappy-cw20/src/: execute.rs  instantiate.rs  query.rs
smart-contracts/scripts/: optimize-arm.sh  optimize.sh
wasmd-chain/: run_testnet.sh
