[package]
name = "flappy-cw20"
version = "0.1.0"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.5"
cosmwasm-storage = "1.1.5"
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
cw20 = "0.16.0"
cw20-base = {version = "0.16.0", features = ["library"]}
serde = {version =  "1.0.147", default-features = false, features = ["derive"]}
thiserror = "1.0.37"
cw-utils = "0.16.0"
schemars = "0.8.11"

[dev-dependencies]
cosmwasm-schema = "1.1.5"
cw-multi-test = "0.16.0"
